--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "jsx": "react",
     "noEmit": true,
@@ -19,9 +20,6 @@
     "allowSyntheticDefaultImports": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "resolveJsonModule": true,
-    "paths": {
-      "@/*": ["src/*"]
-    },
     "typeRoots": ["src/@types"]
   },
   "include": ["src"],
