--- a/template/package.json
+++ b/template/package.json
@@ -2,6 +2,7 @@
   "name": "cra-template-react-boat",
   "version": "0.0.1",
   "license": "MIT",
+  "homepage": "https://yaolx.github.io/react-boat",
   "engines": {
     "yarn": ">=1.22.10",
     "node": ">=12.22.0"
