--- a/template/package.json
+++ b/template/package.json
@@ -44,9 +44,7 @@
     "mockjs": "^1.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router": "^5.2.1",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@rollup/plugin-eslint": "^8.0.1",
@@ -63,6 +61,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "dotenv": "^10.0.0",
     "eslint": "^7.0.1",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-react": "^7.26.1",
     "husky": "4.3.8",
