--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "jsx": "react",
+    "jsx": "react-jsx",
     "noEmit": true,
     "baseUrl": ".",
     "allowJs": true,
@@ -14,13 +13,17 @@
     "moduleResolution": "node",
     // 允许编译javascript文件
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "useDefineForClassFields": true,
     "isolatedModules": true,
     // 允许从没有设置默认导出的模块中默认导入
     "allowSyntheticDefaultImports": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "resolveJsonModule": true,
-    "typeRoots": ["src/@types"]
+    "typeRoots": ["src/@types"],
+    "paths": {
+      "@/*": ["src/*"]
+    },
   },
   "include": ["src"],
   "exclude": ["node_modules"]
