feat:调整tsconfig.json

--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "noEmit": true,
@@ -20,10 +21,7 @@
     "allowSyntheticDefaultImports": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "resolveJsonModule": true,
-    "typeRoots": ["src/@types"],
-    "paths": {
-      "@/*": ["src/*"]
-    },
+    "typeRoots": ["src/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
