--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cra-template-react-boat",
-  "version": "0.0.1",
+  "version": "0.1.2",
   "license": "MIT",
   "homepage": "https://yaolx.github.io/react-boat",
   "engines": {
@@ -18,7 +18,9 @@
     "build:test": "tsc && vite build -m test",
     "build:production": "tsc && vite build -m production",
     "json-server": "json-server json_server_mock/db.json --watch --port 3001",
-    "lint": "eslint src/"
+    "lint": "tsc && eslint src/",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "husky": {
     "hooks": {
@@ -57,6 +59,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-react": "^2.0.1",
+    "c8": "^7.12.0",
     "concurrently": "^7.3.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.0.1",
@@ -68,12 +71,14 @@
     "less": "^4.1.2",
     "lint-staged": "^11.2.3",
     "prettier": "^2.4.1",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^2.77.2",
     "rollup-plugin-visualizer": "^5.5.2",
     "terser": "^5.14.2",
     "typescript": "^4.3.2",
     "vite": "^3.0.7",
     "vite-plugin-compression": "^0.3.5",
-    "vite-plugin-style-import": "^1.2.1"
+    "vite-plugin-style-import": "^1.2.1",
+    "vitest": "^0.21.1"
   }
 }
