--- a/template/package.json
+++ b/template/package.json
@@ -77,6 +77,7 @@
     "terser": "^5.14.2",
     "typescript": "^4.3.2",
     "vite": "^3.0.7",
+    "vite-plugin-chunk-split": "^0.4.0",
     "vite-plugin-compression": "^0.3.5",
     "vite-plugin-style-import": "^1.2.1",
     "vitest": "^0.21.1"
